TUI testing/ratatui-console/tests/snapshots/screens_agents__task7_narrow_standard_warm.snap
---
source: tests/screens_agents.rs
expression: "composite_snapshot(76, Theme::WarmWhite, DisplayMode::Standard)"
---
AGENTS
┌RUNNING - PANEL 2/5───────────────────────────────────────────────────────┐
│[!] URGENT | RUNNING | urgent running                                     │
│agent:run | P5 | 1m 05s | work:running-urgent                             │
│MODEL qwen:64k | AREA portfolio, evidence                                 │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
└──────────────────────────────────────────────────────────────────────────┘

MODELS & REGIME
┌CANDIDATES - PANEL 2/3────────────────────────────────────────────────────┐
│  candidate:evaluating | FAMILY approved-family | STRATEGY ml_model |     │
│2026-08-02 20:00:00 EDT                                                   │
│STATUS EVALUATING | RETENTION POLICY UNAVAILABLE | EVIDENCE               │
│evidence:evaluating                                                       │
│                                                                          │
│  candidate:failed | FAMILY approved-family | STRATEGY ml_model |         │
│2026-08-02 20:00:00 EDT                                                   │
│STATUS FAILED | RETENTION POLICY 30 DAYS | EVIDENCE evidence:failed       │
│                                                                          │
│  candidate:passed | FAMILY approved-family | STRATEGY ml_model |         │
│2026-08-02 20:00:00 EDT                                                   │
│STATUS PASSED | RETENTION POLICY 90 DAYS | EVIDENCE evidence:passed       │
│                                                                          │
│  candidate:active | FAMILY approved-family | STRATEGY ml_model |         │
│2026-08-02 20:00:00 EDT                                                   │
│STATUS ACTIVE | RETENTION POLICY PERMANENT | EVIDENCE evidence:active     │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
└──────────────────────────────────────────────────────────────────────────┘

TIMELINE
┌TIMELINE - IMPACT ONLY────────────────────────────────────────────────────┐
│EXCLUDED BY FILTER 1 | HIDDEN BY SOURCE 7                                 │
│                                                                          │
│[!] URGENT | 2026-08-02 20:00:00 EDT | Portfolio impact detected          │
│ID event:impact | AGENT agent:queue | SYMBOL AAPL | MODEL model:macro |   │
│ORDER order:1 | EVIDENCE evidence:impact                                  │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
└──────────────────────────────────────────────────────────────────────────┘
